feat: implement persistent schema RAG using pgvector and Docker (#6)